# db-scanner

./: .gitignore  CMakeLists.txt  README.md  executions.txt
cmake/: FindOCCI.cmake
config/: scanner.example.json
dbscanner-out/: consistency_report.json  schema.json
dbscanner-out/diagrams/: overview.dot  overview_declared.dot
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/checkpoint/: CMakeLists.txt  CheckpointStore.cpp  CheckpointStore.hpp
src/config/: CMakeLists.txt  CliArgs.cpp  CliArgs.hpp  Config.cpp  Config.hpp
src/core/: CMakeLists.txt  Relationship.cpp  Relationship.hpp  ScanResult.cpp  ScanResult.hpp  TableMetadata.cpp  TableMetadata.hpp  TimeUtil.cpp  TimeUtil.hpp
src/db/: CMakeLists.txt  IConsistencyChecker.hpp  ISchemaSource.hpp  OracleConnectionPool.cpp  OracleConnectionPool.hpp  OracleConsistencyChecker.cpp  OracleConsistencyChecker.hpp  OracleSchemaReader.cpp  OracleSchemaReader.hpp  OracleStatementGuard.hpp  RetryPolicy.hpp
src/engine/: CMakeLists.txt  ScanEngine.cpp  ScanEngine.hpp  ShutdownController.cpp  ShutdownController.hpp  ThreadPool.cpp  ThreadPool.hpp
src/logging/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/relations/: CMakeLists.txt  DependencyGraph.cpp  DependencyGraph.hpp  RelationshipInference.cpp  RelationshipInference.hpp
src/report/: CMakeLists.txt  ConsoleReporter.cpp  ConsoleReporter.hpp  JsonReportWriter.cpp  JsonReportWriter.hpp
tests/: CMakeLists.txt  test_checkpoint_store.cpp  test_config.cpp  test_dependency_graph.cpp  test_relationship_inference.cpp  test_retry_policy.cpp  test_scan_engine.cpp  test_table_metadata_json.cpp
tools/: er_diagram.py
